[project]
name = "pubmed-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "Praveen Kumar",email = "praveenmcs71@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pubmed_proj", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
